ipc/ipdl/test/ipdl/error/PExtendedAttrUnknownAttribute.ipdl
//error: unknown attribute `InvalidAttr'

[InvalidAttr, ChildProc=any]
async protocol PExtendedAttrUnknownValue {
parent:
    async Msg();
};
